--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,59 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Nunito Sans", sans-serif;
+}
+
+.app-container {
+  background: white;
+}
+
+.header {
+  height: 100px;
+  width: 100%;
+  background-color: #3ddcd1;
+  /* clip-path: ellipse(75% 100% at 65% 0%); */
+}
+
+.allPosts-main-wrap {
+  height: 100vh;
+}
+
 .allPosts-Container {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
+.singlePost-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  margin: 0.5rem;
+  border: 1px solid #ccc;
+}
+
 .post {
-  width: 25%;
-  height: 25%;
+  width: 400px;
+  height: 400px;
+  border: 1px solid #ccc;
+  padding: 1rem;
+  margin: 0.5rem;
+}
+
+.date-readmore {
+  display: flex;
+  justify-content: space-between;
 }
 
 .main-image {
   width: 100%;
+  height: 60%;
 }
 
 .singlePost-img {
