--- a/src/App.css
+++ b/src/App.css
@@ -7,19 +7,31 @@
   font-family: "Nunito Sans", sans-serif;
 }
 
-.app-container {
-  background: white;
+/* .app-container {
+  background: black;
+  height: 100%;
+  color: white;
 }
 
 .header {
-  height: 100px;
-  width: 100%;
-  background-color: #3ddcd1;
-  /* clip-path: ellipse(75% 100% at 65% 0%); */
+  color: white;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav > ul {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+}
+
+.nav > ul li {
+  display: flex;
+  padding: 0.5rem;
 }
 
 .allPosts-main-wrap {
-  height: 100vh;
+  background-color: rgb(23, 19, 19);
 }
 
 .allPosts-Container {
@@ -42,8 +54,10 @@
   width: 400px;
   height: 400px;
   border: 1px solid #ccc;
+  background-color: purple;
   padding: 1rem;
   margin: 0.5rem;
+  border-radius: 0.5rem;
 }
 
 .date-readmore {
@@ -63,4 +77,4 @@
 a {
   text-decoration: none;
   color: black;
-}
+} */
